[gd_scene format=3 uid="uid://bdh7najgc4eup"]

[ext_resource type="Script" path="res://Scripts/brush_switcher.gd" id="1_1o454"]
[ext_resource type="Script" uid="uid://c41lmpi2r4qhm" path="res://Scripts/pallet.gd" id="2_o8g73"]
[ext_resource type="Script" path="res://Scripts/makeup_brush_liner.gd" id="2_v3fvj"]
[ext_resource type="Script" uid="uid://b7mnjofsqo2rw" path="res://Scripts/makeup_brush_soft.gd" id="3_qswnl"]
[ext_resource type="Script" uid="uid://bx83igllljdg" path="res://Scripts/controller.gd" id="3_v3fvj"]
[ext_resource type="Script" uid="uid://bkeswuixc4f" path="res://Scripts/makeup_brush_lipstick.gd" id="4_qswnl"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_qswnl"]
light_mode = 1

[node name="Node2D" type="Node2D" unique_id=1749975836]

[node name="Control2" type="Control" parent="." unique_id=255457749]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_1o454")

[node name="VBoxContainer" type="VBoxContainer" parent="Control2" unique_id=1872528751]
layout_mode = 0
offset_left = 161.0
offset_top = 230.0
offset_right = 640.0
offset_bottom = 296.0

[node name="PreciseBrush" type="Button" parent="Control2/VBoxContainer" unique_id=818478664]
layout_mode = 2
text = "Thin Brush"

[node name="SoftBrush" type="Button" parent="Control2/VBoxContainer" unique_id=1142222656]
layout_mode = 2
text = "Soft Brush"

[node name="MediumBrush" type="Button" parent="Control2/VBoxContainer" unique_id=1171567249]
layout_mode = 2
text = "Medium Brush"

[node name="ThinBrush" type="Node2D" parent="." unique_id=1683283584 node_paths=PackedStringArray("palette")]
material = SubResource("CanvasItemMaterial_qswnl")
script = ExtResource("2_v3fvj")
palette = NodePath("../Pallet")

[node name="SoftBrush" type="Node2D" parent="." unique_id=702286414 node_paths=PackedStringArray("palette")]
script = ExtResource("3_qswnl")
palette = NodePath("../Pallet")

[node name="MediumBrush" type="Node2D" parent="." unique_id=421744736 node_paths=PackedStringArray("palette")]
script = ExtResource("4_qswnl")
palette = NodePath("../Pallet")

[node name="Pallet" type="Control" parent="." unique_id=1676433088]
layout_mode = 3
anchors_preset = 0
script = ExtResource("2_o8g73")

[node name="Controller" type="Node2D" parent="." unique_id=4187562]
script = ExtResource("3_v3fvj")
